fixed tel, but when no internet, no banks in BankList

--- a/CurrencyInformation/bankDetails.plist
+++ b/CurrencyInformation/bankDetails.plist
@@ -17,7 +17,7 @@
 		<key>monThuWorkTime</key>
 		<string>9:00 - 16:00</string>
 		<key>phoneNumber</key>
-		<string>375-17-237-07-02</string>
+		<string>+375-17-237-07-02</string>
 		<key>friWorkTime</key>
 		<string>9:00 - 15:00</string>
 		<key>site</key>
