--- a/CurrencyInformation/Минск.Банки-Info.plist
+++ b/CurrencyInformation/Минск.Банки-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.fcg.ioscourse.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.fcg.ioscourse.banks</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
